update: modified Files transformer

--- a/notebooks/thorx_notebook.ipynb
+++ b/notebooks/thorx_notebook.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,21 +249,8 @@
     "        self.covid19_path = str\n",
     "        self.normal_path = str\n",
     "        self.array = []\n",
-    "\n",
-    "    def df1_file_paths(self, pneumonia_path = str, covid19_path = str, normal_path = str):\n",
-    "        pneumonia_paths = glob.glob(pneumonia_path + \"/*\")\n",
-    "        covid19_paths = glob.glob(covid19_path + \"/*\")\n",
-    "        normal_paths = glob.glob(normal_path + \"/*\")\n",
-    "\n",
-    "        random.seed(self.random_seed)\n",
-    "        random.shuffle(pneumonia_paths)\n",
-    "        random.shuffle(covid19_paths)\n",
-    "        random.shuffle(normal_paths)\n",
-    "\n",
-    "        images_paths = pneumonia_paths[:self.samples] + covid19_paths[:self.samples] + normal_paths[:self.samples] \n",
-    "        return images_paths\n",
     "    \n",
-    "    def df2_file_paths(self, pneumonia_path = str, covid19_path = str, normal_path = str):\n",
+    "    def file_paths(self, pneumonia_path = str, covid19_path = str, normal_path = str):\n",
     "        pneumonia_paths = pneumonia_path\n",
     "        covid19_paths = covid19_path\n",
     "        normal_paths = normal_path\n",
@@ -280,9 +267,9 @@
     "        for i in range(len(images_paths)):\n",
     "            if i < len(images_paths) / 3:\n",
     "                self.array.append(\"pneumonia\")\n",
-    "            if i >= len(images_paths) / 3 and i < (len(images_paths) * (2/3)):\n",
+    "            elif i >= len(images_paths) / 3 and i < (len(images_paths) * (2/3)):\n",
     "                self.array.append(\"covid\")\n",
-    "            if i >= (len(images_paths) * (2/3)):\n",
+    "            elif i >= (len(images_paths) * (2/3)):\n",
     "                self.array.append(\"normal\")\n",
     "        return self.array\n",
     "        \n",
@@ -312,16 +299,16 @@
     "class DataLabeling(BaseEstimator, TransformerMixin):\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.one_hot_encod = []\n",
+    "        self.encoder = []\n",
     "    \n",
     "    def fit(self, labels : list, y = 0):      \n",
     "        label_encoder = LabelEncoder()\n",
-    "        self.one_hot_encod = label_encoder.fit_transform(labels)\n",
-    "        self.one_hot_encod = to_categorical(self.one_hot_encod)\n",
-    "        return self.one_hot_encod\n",
+    "        self.encoder = label_encoder.fit_transform(labels)\n",
+    "        self.encoder = to_categorical(self.encoder)\n",
+    "        return self.encoder\n",
     "\n",
     "    def transform(self, labels : list, y = 0):\n",
-    "        return self.one_hot_encod\n",
+    "        return self.encoder\n",
     "\n",
     "class Headmodel(BaseEstimator, TransformerMixin):\n",
     "\n",
@@ -604,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,12 +613,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "labels = DataLabeling()\n",
     "labels = labels.fit(df['images_label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 1.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 0., 1.],\n",
+       "       ...,\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 1., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
    ]
   },
   {
