update: modified Files transformer

--- a/notebooks/thorx_notebook.ipynb
+++ b/notebooks/thorx_notebook.ipynb
@@ -250,7 +250,7 @@
     "        self.normal_path = str\n",
     "        self.array = []\n",
     "    \n",
-    "    def file_paths(self, pneumonia_path = str, covid19_path = str, normal_path = str):\n",
+    "    def file_paths(self, pneumonia_path : str, covid19_path : str, normal_path : str):\n",
     "        pneumonia_paths = pneumonia_path\n",
     "        covid19_paths = covid19_path\n",
     "        normal_paths = normal_path\n",
@@ -509,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_paths = load_files.df2_file_paths ( \n",
+    "image_paths = load_files.file_paths ( \n",
     "    PNEUMONIA_PATH,\n",
     "    COVID_19_PATH,\n",
     "    NORMAL_PATH,\n",
